# tracing-min

./: Cargo.toml
src/: main.rs
