[package]
name = "tracing-min"
version = "0.1.0"
authors = ["Luca Palmieri <lpalmieri@truelayer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.15", features = ["attributes"] }
tracing-opentelemetry = "0.5.0"
tracing-error = "0.1.2"
tracing-subscriber = "0.2.6"
opentelemetry = { version = "0.6.0" }
opentelemetry-jaeger = { version = "0.5.0", features = ["collector_client"] }
thrift = "0.13.0"
